--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -12,6 +12,11 @@
   "Permissions": "دسترسی ها",
   "Collection permissions": "دسترسی‌های مجموعه",
   "Share this collection": "جستجو در مجموعه",
+  "Import document": "وارد کردن سند",
+  "Sort in sidebar": "مرتب‌سازی در نوار کناری",
+  "A-Z sort": "A-Z sort",
+  "Z-A sort": "Z-A sort",
+  "Manual sort": "مرتب‌سازی دستی",
   "Search in collection": "جستجو در مجموعه",
   "Star": "ستاره‌گذاری",
   "Unstar": "برداشتن ستاره",
@@ -83,7 +88,6 @@
   "Search in document": "جستجو در مستندات",
   "Print": "چاپ",
   "Print document": "چاپ سند",
-  "Import document": "وارد کردن سند",
   "Templatize": "تبدیل شدن به قالب",
   "Create template": "ایجاد قالب",
   "Open random document": "بازکردن مستند تصادفی",
@@ -206,6 +210,8 @@
   "Move document": "انتقال سند",
   "Moving": "در حال حرکت",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.",
+  "More options": "More options",
+  "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "مجموعه‌ها بارگذاری نمی‌شوند، لطفاً برنامه را دوباره بارگیری کنید",
   "Start view": "نمای شروع",
   "Install now": "اکنون نصب شود",
@@ -216,7 +222,6 @@
   "Deleted Collection": "مجموعه‌های حذف شده",
   "Untitled": "بدون عنوان",
   "Unpin": "برداشتن سنجاق",
-  "{{ minutes }}m read": "{{ minutes }}m read",
   "Select a location to copy": "Select a location to copy",
   "Document copied": "فایل مورد نظر کپیشد",
   "Couldn’t copy the document, try again?": "امکان ایجاد سند وجود نداشت، دوباره تلاش شود؟",
@@ -345,6 +350,7 @@
   "Reaction picker": "Reaction picker",
   "Could not load reactions": "Could not load reactions",
   "Reaction": "واکنش",
+  "{{ minutes }}m read": "{{ minutes }}m read",
   "Revision deleted": "Revision deleted",
   "Current version": "Current version",
   "{{userName}} edited": "{{userName}} ویرایش شد",
@@ -365,6 +371,8 @@
   "Disable this setting to discourage search engines from indexing the page": "Disable this setting to discourage search engines from indexing the page",
   "Show last modified": "Show last modified",
   "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Show table of contents": "Show table of contents",
+  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
   "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "دعوت",
   "{{ userName }} was added to the collection": "{{ userName }} به مجموعه اضافه شد",
@@ -421,6 +429,7 @@
   "Could not load shared documents": "Could not load shared documents",
   "Shared with me": "Shared with me",
   "Show more": "اطلاعات بیشتر",
+  "Link options": "Link options",
   "Could not load starred documents": "Could not load starred documents",
   "Starred": "ستاره‌دار",
   "Up to date": "به روز",
@@ -475,7 +484,7 @@
   "Keep as link": "Keep as link",
   "Mention": "Mention",
   "Embed": "Embed",
-  "More options": "More options",
+  "Rename": "Rename",
   "Insert after": "Insert after",
   "Insert before": "Insert before",
   "Move up": "Move up",
@@ -559,7 +568,6 @@
   "Video": "Video",
   "None": "None",
   "Delete embed": "Delete embed",
-  "Rename": "Rename",
   "Could not import file": "نمی‌توان فایل را وارد کرد",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -577,10 +585,6 @@
   "Integrations": "یکپارچه‌سازی‌ها",
   "API key": "API key",
   "Show path to document": "نمایش مسیر سند",
-  "Sort in sidebar": "مرتب‌سازی در نوار کناری",
-  "A-Z sort": "A-Z sort",
-  "Z-A sort": "Z-A sort",
-  "Manual sort": "مرتب‌سازی دستی",
   "Collection menu": "Collection menu",
   "Comment options": "Comment options",
   "Enable viewer insights": "Enable viewer insights",
