--- a/shared/i18n/locales/th_TH/translation.json
+++ b/shared/i18n/locales/th_TH/translation.json
@@ -12,6 +12,11 @@
   "Permissions": "สิทธิ์การใช้งาน",
   "Collection permissions": "สิทธิ์ของคอลเลกชัน",
   "Share this collection": "แชร์คอลเล็กชันนี้",
+  "Import document": "นำเข้าเอกสาร",
+  "Sort in sidebar": "เรียงในแถบด้านข้าง",
+  "A-Z sort": "A-Z sort",
+  "Z-A sort": "Z-A sort",
+  "Manual sort": "เรียงลำดับด้วยตนเอง",
   "Search in collection": "ค้นหาจากคอลเลกชัน",
   "Star": "ติดดาว",
   "Unstar": "เลิกติดดาว",
@@ -83,7 +88,6 @@
   "Search in document": "Search in document",
   "Print": "พิมพ์",
   "Print document": "พิมพ์เอกสาร",
-  "Import document": "นำเข้าเอกสาร",
   "Templatize": "ทำเป็นเทมเพลต",
   "Create template": "สร้างเทมเพลต",
   "Open random document": "Open random document",
@@ -206,6 +210,8 @@
   "Move document": "ย้ายเอกสาร",
   "Moving": "Moving",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.",
+  "More options": "More options",
+  "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "ไม่สามารถโหลดคอลเลคชั่นได้ โปรดรีโหลดแอป",
   "Start view": "Start view",
   "Install now": "Install now",
@@ -216,7 +222,6 @@
   "Deleted Collection": "คอลเลคชั่นที่ถูกลบ",
   "Untitled": "ไม่มีชื่อ",
   "Unpin": "เลิกปักหมุด",
-  "{{ minutes }}m read": "{{ minutes }}m read",
   "Select a location to copy": "Select a location to copy",
   "Document copied": "Document copied",
   "Couldn’t copy the document, try again?": "Couldn’t copy the document, try again?",
@@ -345,6 +350,7 @@
   "Reaction picker": "Reaction picker",
   "Could not load reactions": "Could not load reactions",
   "Reaction": "Reaction",
+  "{{ minutes }}m read": "{{ minutes }}m read",
   "Revision deleted": "Revision deleted",
   "Current version": "เวอร์ชันปัจจุบัน",
   "{{userName}} edited": "{{userName}} ทำการปรับปรุง",
@@ -365,6 +371,8 @@
   "Disable this setting to discourage search engines from indexing the page": "Disable this setting to discourage search engines from indexing the page",
   "Show last modified": "Show last modified",
   "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Show table of contents": "Show table of contents",
+  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
   "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Invite",
   "{{ userName }} was added to the collection": "เพิ่ม {{ userName }} ลงในคอลเล็กชันแล้ว",
@@ -421,6 +429,7 @@
   "Could not load shared documents": "Could not load shared documents",
   "Shared with me": "Shared with me",
   "Show more": "แสดงเพิ่มเติม",
+  "Link options": "Link options",
   "Could not load starred documents": "Could not load starred documents",
   "Starred": "ติดดาว",
   "Up to date": "Up to date",
@@ -475,7 +484,7 @@
   "Keep as link": "Keep as link",
   "Mention": "Mention",
   "Embed": "Embed",
-  "More options": "More options",
+  "Rename": "Rename",
   "Insert after": "Insert after",
   "Insert before": "Insert before",
   "Move up": "Move up",
@@ -559,7 +568,6 @@
   "Video": "Video",
   "None": "None",
   "Delete embed": "Delete embed",
-  "Rename": "Rename",
   "Could not import file": "ไม่สามารถนำเข้าไฟล์ได้",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -577,10 +585,6 @@
   "Integrations": "Integration",
   "API key": "API key",
   "Show path to document": "แสดงเส้นทางไปยังเอกสาร",
-  "Sort in sidebar": "เรียงในแถบด้านข้าง",
-  "A-Z sort": "A-Z sort",
-  "Z-A sort": "Z-A sort",
-  "Manual sort": "เรียงลำดับด้วยตนเอง",
   "Collection menu": "Collection menu",
   "Comment options": "Comment options",
   "Enable viewer insights": "Enable viewer insights",
