--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -319,6 +319,7 @@
   "Permission": "Permission",
   "Change Language": "Dili Değiştir",
   "Dismiss": "Yoksay",
+  "Unable to download image": "Unable to download image",
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Close": "Close",
