--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -319,6 +319,7 @@
   "Permission": "Права доступу",
   "Change Language": "Змінити мову",
   "Dismiss": "Відхилити",
+  "Unable to download image": "Unable to download image",
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Close": "Закрити",
