--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -319,6 +319,7 @@
   "Permission": "Permissão",
   "Change Language": "Mudar Idioma",
   "Dismiss": "Descartar",
+  "Unable to download image": "Unable to download image",
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Close": "Fechar",
