--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -319,6 +319,7 @@
   "Permission": "Permission",
   "Change Language": "Ubah Bahasa",
   "Dismiss": "Menutup",
+  "Unable to download image": "Unable to download image",
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Close": "Menutup",
