--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -319,6 +319,7 @@
   "Permission": "مجوز",
   "Change Language": "تغییر زبان",
   "Dismiss": "رد کردن",
+  "Unable to download image": "Unable to download image",
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "View, navigate, or download images in the document",
   "Close": "Close",
