--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "Collections archivées",
   "New doc": "Nouveau doc",
   "Empty": "Vide",
+  "No collections": "No collections",
   "Collapse": "Réduire",
   "Expand": "Développer",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Document non pris en charge - essayez un format Markdown, Text, HTML ou Word",
