--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "Keresés a gyűjteményben",
   "New doc": "Új doku",
   "Empty": "Üres",
+  "No collections": "No collections",
   "Collapse": "Összezárás",
   "Expand": "Kinyitás",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Ez a dokumentum nem támogatott – próbáljon Markdown, egyszerű szöveg, HTML vagy Word formátumot",
