--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "Archivierte Sammlungen",
   "New doc": "Neues Dokument",
   "Empty": "Leer",
+  "No collections": "No collections",
   "Collapse": "Zusammenklappen",
   "Expand": "Ausklappen",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Dokument nicht unterstützt - versuche Markdown, Klartext, HTML oder Word",
