--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "Colecciones archivadas",
   "New doc": "Nuevo doc",
   "Empty": "Vacío",
+  "No collections": "No collections",
   "Collapse": "Colapsar",
   "Expand": "Expandir",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Documento no compatible – intenta Markdown, Texto sin formato, HTML o Word",
