--- a/shared/i18n/locales/da_DK/translation.json
+++ b/shared/i18n/locales/da_DK/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "Archived collections",
   "New doc": "Nyt dokument",
   "Empty": "Tom",
+  "No collections": "No collections",
   "Collapse": "Collapse",
   "Expand": "Expand",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Dokumentet understøttes ikke – prøv Markdown, Almindelig tekst, HTML, eller Word",
