--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "Заархівовані колекції",
   "New doc": "Новий документ",
   "Empty": "Порожньо",
+  "No collections": "No collections",
   "Collapse": "Згорнути",
   "Expand": "Розгорнути",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Документ не підтримується – спробуйте Markdown, TXT-файл, HTML або Word",
