--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "归档文档集",
   "New doc": "新建文档",
   "Empty": "空",
+  "No collections": "No collections",
   "Collapse": "收起",
   "Expand": "展开",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "不支持的文档类型 - 请用Markdown，纯文本，HTML或Word格式",
