--- a/shared/i18n/locales/th_TH/translation.json
+++ b/shared/i18n/locales/th_TH/translation.json
@@ -419,6 +419,7 @@
   "Archived collections": "Archived collections",
   "New doc": "สร้างเอกสารใหม่",
   "Empty": "ว่างเปล่า",
+  "No collections": "No collections",
   "Collapse": "ย่อ",
   "Expand": "ขยาย",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "ไม่รองรับเอกสารชนิดนี้ – ลองใช้ Markdown, ข้อความธรรมดา, HTML หรือ Word",
