--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -503,7 +503,7 @@
   "Code": "Code",
   "Comment": "Comment",
   "Create link": "Create link",
-  "Edit Image Url": "Edit Image Url",
+  "Edit image URL": "Edit image URL",
   "Sorry, an error occurred creating the link": "Sorry, an error occurred creating the link",
   "Create a new child doc": "Create a new child doc",
   "Delete table": "Delete table",
@@ -569,7 +569,7 @@
   "Video": "Video",
   "None": "None",
   "Delete embed": "Delete embed",
-  "Select a new image": "Select a new image",
+  "Upload an image": "Upload an image",
   "Could not import file": "Could not import file",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
