--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -319,7 +319,7 @@
   "Permission": "Rechten",
   "Change Language": "Wijzig taal",
   "Dismiss": "Negeer",
-  "Unable to download image": "Unable to download image",
+  "Unable to download image": "Kan afbeelding niet downloaden",
   "Lightbox": "Lightbox",
   "View, navigate, or download images in the document": "Bekijk, navigeer of download afbeeldingen in het document",
   "Close": "Sluiten",
@@ -370,8 +370,8 @@
   "Disable this setting to discourage search engines from indexing the page": "Schakel deze instelling uit om zoekmachines te ontmoedigen bij het indexeren van de pagina",
   "Show last modified": "Toon laatst gewijzigd",
   "Display the last modified timestamp on the shared page": "De laatst gewijzigde tijdstempel op de gedeelde pagina weergeven",
-  "Show table of contents": "Show table of contents",
-  "Display the table of contents on documents by default": "Display the table of contents on documents by default",
+  "Show table of contents": "Inhoudsopgave tonen",
+  "Display the table of contents on documents by default": "Standaard de inhoudsopgave van documenten weergeven",
   "All documents in this collection will be shared on the web, including any new documents added later": "Alle documenten in deze collectie worden op het web gedeeld, inclusief nieuwe documenten die later worden toegevoegd",
   "Invite": "Uitnodigen",
   "{{ userName }} was added to the collection": "{{ userName }} is aan de verzameling toegevoegd",
@@ -419,7 +419,7 @@
   "Archived collections": "Zoek in collecties",
   "New doc": "Nieuw document",
   "Empty": "Leeg",
-  "No collections": "No collections",
+  "No collections": "Geen collecties",
   "Collapse": "Invouwen",
   "Expand": "Uitvouwen",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Document niet ondersteund - probeer Markdown, platte tekst, HTML of Word",
@@ -429,7 +429,7 @@
   "Could not load shared documents": "Kan gedeelde documenten niet laden",
   "Shared with me": "Gedeeld met mij",
   "Show more": "Meer weergeven",
-  "Link options": "Link options",
+  "Link options": "Link-opties",
   "Could not load starred documents": "Kan favoriete documenten niet laden",
   "Starred": "Favorieten",
   "Up to date": "Bijgewerkt",
