--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -617,6 +617,7 @@
   "Account": "Account",
   "API & Apps": "API & apps",
   "Details": "Details",
+  "Authentication": "Authentication",
   "Security": "Beveiliging",
   "Features": "Features",
   "Members": "Deelnemers",
@@ -1004,6 +1005,19 @@
   "Authorization URL": "Autorisatie-URL",
   "Where users are redirected to authorize this app": "Waar gebruikers worden omgeleid om deze app te autoriseren",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Met applicaties kunt je interne of openbare integraties bouwen met Outline en veilige toegang via OAuth bieden. Zie de <em>documentatie</em> voor meer details.",
+  "Settings saved": "Instellingen opgeslagen",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "Sta leden toe om in te loggen met {{ authProvider }}",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "Verbonden",
+  "Disabled": "Uitgeschakeld",
+  "Connect": "Verbinden",
+  "Allow members to sign-in using their email address": "Sta leden toe om in te loggen met hun e-mailadres",
+  "The server must have SMTP configured to enable this setting": "De server moet SMTP hebben geconfigureerd om deze instelling in te schakelen",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "door {{ name }}",
   "Last used": "Laatst gebruikt",
   "No expiry": "Geen vervaldatum",
@@ -1012,7 +1026,6 @@
   "Copied": "Gekopieerd",
   "Are you sure you want to revoke the {{ tokenName }} token?": "Weet je zeker dat je de token {{ tokenName }} wilt intrekken?",
   "Disconnect integration": "Ontkoppel integratie",
-  "Connected": "Verbonden",
   "Disconnecting": "Ontkoppelen",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Weet je zeker dat je de koppeling met <em>{{ service }}</em> wilt verbreken?",
   "This will stop sending analytics events to the configured instance.": "Hiermee stopt het verzenden van analytics-gebeurtenissen naar de geconfigureerde instantie.",
@@ -1083,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Je kunt een zipbestand importeren dat eerder is geëxporteerd vanuit een Outline-installatie – collecties, documenten en afbeeldingen worden geïmporteerd. Open in Outline <em>Export</em> in de zijbalk Instellingen en klik op <em>Gegevens exporteren</em>.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "Sleep het zip-bestand vanuit de Markdown-exportoptie in {{appName}}, of klik om te uploaden",
   "Configure": "Configureren",
-  "Connect": "Verbinden",
   "Last active": "Laatst actief",
   "Role": "Rol",
   "Guest": "Gast",
@@ -1104,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Aangepaste emoji's kunnen worden gebruikt in je hele werkruimte in documenten, opmerkingen en reacties.",
   "Left": "Links",
   "Right": "Rechts",
-  "Settings saved": "Instellingen opgeslagen",
   "Logo updated": "Logo bijgewerkt",
   "Unable to upload new logo": "Kan het nieuwe logo niet uploaden",
   "Delete workspace": "Werkruimte verwijderen",
@@ -1209,11 +1220,7 @@
   "Are you sure you want to require invites?": "Weet je zeker dat je deze uitnodiging wilt verwijderen?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Nieuwe gebruikers moeten eerst worden uitgenodigd om een account aan te maken. <em>Standaard rol</em> en <em>Toegestane domeinen</em> zullen niet langer van toepassing zijn.",
   "Settings that impact the access, security, and content of your workspace.": "Instellingen die van invloed zijn op de toegang, beveiliging en inhoud van je werkruimte.",
-  "Allow members to sign-in with {{ authProvider }}": "Sta leden toe om in te loggen met {{ authProvider }}",
-  "Disabled": "Uitgeschakeld",
-  "Allow members to sign-in using their email address": "Sta leden toe om in te loggen met hun e-mailadres",
-  "The server must have SMTP configured to enable this setting": "De server moet SMTP hebben geconfigureerd om deze instelling in te schakelen",
-  "Access": "Toegang",
+  "Invites": "Invites",
   "Allow users to send invites": "Gebruikers toestaan uitnodigingen te sturen",
   "Allow editors to invite other people to the workspace": "Redacteurs toestaan om andere personen uit te nodigen voor de werkruimte",
   "Require invites": "Uitnodigingen vereisen",
