--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -617,6 +617,7 @@
   "Account": "Konto",
   "API & Apps": "API i aplikacje",
   "Details": "Szczegóły",
+  "Authentication": "Authentication",
   "Security": "Bezpieczeństwo",
   "Features": "Funkcje",
   "Members": "Członkowie",
@@ -1004,6 +1005,19 @@
   "Authorization URL": "Adres URL autoryzacji",
   "Where users are redirected to authorize this app": "Gdzie użytkownicy są przekierowywani podczas autoryzacji aplikacji",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Aplikacje umożliwiają tworzenie wewnętrznych lub publicznych integracji z Outline i zapewniają bezpieczny dostęp za pośrednictwem OAuth. Więcej informacji znajdziesz w <em>dokumentacji dla deweloperów</em>.",
+  "Settings saved": "Ustawienia zapisane",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "Zezwalaj członkom na logowanie się za pomocą {{ authProvider }}",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "Połączono",
+  "Disabled": "Wyłączony",
+  "Connect": "Połącz",
+  "Allow members to sign-in using their email address": "Zezwalaj członkom na logowanie się za pomocą swojego adresu e-mail",
+  "The server must have SMTP configured to enable this setting": "Serwer musi mieć skonfigurowane SMTP, aby włączyć to ustawienie",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "przez {{ name }}",
   "Last used": "Ostatnio używane",
   "No expiry": "Brak terminu ważności",
@@ -1012,7 +1026,6 @@
   "Copied": "Skopiowano",
   "Are you sure you want to revoke the {{ tokenName }} token?": "Czy na pewno chcesz unieważnić token {{ tokenName }}?",
   "Disconnect integration": "Rozłącz integrację",
-  "Connected": "Połączono",
   "Disconnecting": "Rozłączanie",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Czy na pewno chcesz odłączyć integrację <em>{{ service }}</em>?",
   "This will stop sending analytics events to the configured instance.": "To zatrzyma wysyłanie zdarzeń analitycznych do skonfigurowanej instancji.",
@@ -1083,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Możesz zaimportować plik zip, który został wcześniej wyeksportowany z instalacji Outline – zostaną zaimportowane kolekcje, dokumenty i obrazy. W Outline otwórz <em>Eksport</em> w pasku bocznym Ustawień i kliknij <em>Eksportuj dane</em>.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "Przeciągnij i upuść plik zip z opcji eksportu Markdown w {{appName}} lub kliknij, aby wybrać plik do przesłania",
   "Configure": "Konfiguruj",
-  "Connect": "Połącz",
   "Last active": "Ostatnio aktywny",
   "Role": "Rola",
   "Guest": "Gość",
@@ -1104,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Lewo",
   "Right": "Prawo",
-  "Settings saved": "Ustawienia zapisane",
   "Logo updated": "Logo zaktualizowane",
   "Unable to upload new logo": "Nie można przesłać nowego logo",
   "Delete workspace": "Usuń przestrzeń roboczą",
@@ -1209,11 +1220,7 @@
   "Are you sure you want to require invites?": "Czy na pewno chcesz wymagać zaproszeń?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Nowi użytkownicy będą musieli najpierw zostać zaproszeni do utworzenia konta. <em>Domyślna rola</em> i <em>Dozwolone domeny</em> nie będą już obowiązywać.",
   "Settings that impact the access, security, and content of your workspace.": "Ustawienia wpływające na dostęp, bezpieczeństwo i zawartość twojego obszaru roboczego.",
-  "Allow members to sign-in with {{ authProvider }}": "Zezwalaj członkom na logowanie się za pomocą {{ authProvider }}",
-  "Disabled": "Wyłączony",
-  "Allow members to sign-in using their email address": "Zezwalaj członkom na logowanie się za pomocą swojego adresu e-mail",
-  "The server must have SMTP configured to enable this setting": "Serwer musi mieć skonfigurowane SMTP, aby włączyć to ustawienie",
-  "Access": "Dostęp",
+  "Invites": "Invites",
   "Allow users to send invites": "Zezwalaj użytkownikom na wysyłanie zaproszeń",
   "Allow editors to invite other people to the workspace": "Zezwalaj edytorom na zapraszanie innych osób do obszaru roboczego",
   "Require invites": "Wymagaj zaproszeń",
