--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -617,6 +617,7 @@
   "Account": "Hesap",
   "API & Apps": "API & Uygulamalar",
   "Details": "Ayrıntılar",
+  "Authentication": "Authentication",
   "Security": "Güvenlik",
   "Features": "Özellikler",
   "Members": "Üyeler",
@@ -1004,6 +1005,19 @@
   "Authorization URL": "Yetkilendirme URL'si",
   "Where users are redirected to authorize this app": "Kullanıcıların bu uygulamayı yetkilendirmek için yönlendirildiği yer",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Uygulamalar, Outline ile dahili veya herkese açık entegrasyonlar oluşturmanıza ve OAuth aracılığıyla güvenli erişim sağlamanıza olanak tanır. Daha fazla ayrıntı için <em>geliştirici belgelerine</em> bakın.",
+  "Settings saved": "Ayarlar kaydedildi",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "Üyelerin {{ authProvider }} ile oturum açmasına izin ver",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "Bağlandı",
+  "Disabled": "Devre dışı",
+  "Connect": "Bağla",
+  "Allow members to sign-in using their email address": "Üyelerin e-posta adreslerini kullanarak oturum açmasına izin ver",
+  "The server must have SMTP configured to enable this setting": "Bu ayarı etkinleştirmek için sunucuda SMTP yapılandırılmış olmalıdır",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "geliştirici: {{ name }}",
   "Last used": "Son kullanım",
   "No expiry": "Sona erme yok",
@@ -1012,7 +1026,6 @@
   "Copied": "Kopyalandı",
   "Are you sure you want to revoke the {{ tokenName }} token?": "{{ tokenName }} belirtecini iptal etmek istediğinizden emin misiniz?",
   "Disconnect integration": "Entegrasyon bağlantısını kes",
-  "Connected": "Bağlandı",
   "Disconnecting": "Bağlantı kesiliyor",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "<em>{{ service }}</em> entegrasyonunun bağlantısını kesmek istediğinizden emin misiniz?",
   "This will stop sending analytics events to the configured instance.": "Bu, yapılandırılan örneğe analitik olayları göndermeyi durduracaktır.",
@@ -1083,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Daha önce bir Outline kurulumundan dışa aktarılmış bir zip dosyasını içe aktarabilirsiniz – koleksiyonlar, belgeler ve görseller içe aktarılacaktır. Outline'da, Ayarlar kenar çubuğunda <em>Dışa Aktar</em>'ı açın ve <em>Verileri Dışa Aktar</em>'a tıklayın.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "{{appName}} uygulamasındaki Markdown dışa aktarma seçeneğinden zip dosyasını sürükleyip bırakın veya yüklemek için tıklayın",
   "Configure": "Yapılandır",
-  "Connect": "Bağla",
   "Last active": "Son aktiflik",
   "Role": "Rol",
   "Guest": "Misafir",
@@ -1104,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Sol",
   "Right": "Sağ",
-  "Settings saved": "Ayarlar kaydedildi",
   "Logo updated": "Logo güncellendi",
   "Unable to upload new logo": "Yeni logo yüklenemiyor",
   "Delete workspace": "Çalışma alanını sil",
@@ -1209,11 +1220,7 @@
   "Are you sure you want to require invites?": "Davet gerektirmek istediğinizden emin misiniz?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Yeni kullanıcıların bir hesap oluşturmak için önce davet edilmesi gerekecektir. <em>Varsayılan rol</em> ve <em>İzin verilen alan adları</em> artık geçerli olmayacaktır.",
   "Settings that impact the access, security, and content of your workspace.": "Çalışma alanınızın erişim, güvenlik ve içeriğini etkileyen ayarlar.",
-  "Allow members to sign-in with {{ authProvider }}": "Üyelerin {{ authProvider }} ile oturum açmasına izin ver",
-  "Disabled": "Devre dışı",
-  "Allow members to sign-in using their email address": "Üyelerin e-posta adreslerini kullanarak oturum açmasına izin ver",
-  "The server must have SMTP configured to enable this setting": "Bu ayarı etkinleştirmek için sunucuda SMTP yapılandırılmış olmalıdır",
-  "Access": "Erişim",
+  "Invites": "Invites",
   "Allow users to send invites": "Kullanıcıların davet göndermesine izin ver",
   "Allow editors to invite other people to the workspace": "Düzenleyicilerin çalışma alanına başka kişileri davet etmesine izin ver",
   "Require invites": "Davet gerektir",
